--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.10.1",
     "run": "^1.5.0"
   },
   "devDependencies": {
